--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img src="Twitter.png" />
         </a>   
         <a href="https://www.linkedin.com/in/merlijn-wegen/">
-            <img src="LinkedIn.png" />
+            <img src="Linkedin.png" />
         </a>   
         <a href="https://github.com/MerlijnWegen">
             <img src="Github.png" />
